update vue code

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="" style="background: #383431;">
+<html lang="" style="background: #000;">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,9 @@
       body,html{font-family: "微软雅黑",Microsoft JhengHei;}
       .el-progress__text{color: #fff!important;}
       .el-table .cell{white-space:nowrap!important;word-break:normal!important;text-overflow:initial!important;}
+      .el-table thead{color: #000!important;}
+      .el-table{border-top: 1px solid #EBEEF5;color: #000!important;}
+     
       @media (max-width:767px) {
       	.el-table th.el-table__cell>.cell{font-size: 12px!important;}
       	
