--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,  user-scalable=no">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="format-detection" content="telephone=no" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="icon" href="<%= BASE_URL %>zheng.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
     	.el-table th.el-table__cell>.cell{font-weight: normal;line-height: 18px;padding-left: 5px!important;padding-right: 5px!important;white-space:nowrap;text-overflow:initial!important;}
